src/objects/usermng__c.object
<CustomObject>
    <fields>
        <fullName>companyname__c</fullName>
        <label>会社名</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mail__c</fullName>
        <label>メールアドレス</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>naisen__c</fullName>
        <label>内線</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tel__c</fullName>
        <label>電話</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>valid__c</fullName>
        <defaultValue>true</defaultValue>
        <label>有効</label>
        <type>Checkbox</type>
    </fields>
    <label>ユーザ管理</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>GroupMail_usermng</fullName>
        <filterScope>Queue</filterScope>
        <label>メールテスト</label>
        <queue>GroupMail</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>ユーザ名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>ShareReason1__c</fullName>
        <label>テストのため</label>
    </sharingReasons>
</CustomObject>